--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <div id="drag-container">
   <div id="spin-container">
     <!-- Add your images (or video) here -->
-    <img src="images/1.jpg" alt="">
-    <img src="images/2.jpg" alt="">
-    <img src="images/3.jpg" alt="">
-    <img src="images/4.jpg" alt="">
-    <img src="images/5.jpg" alt="">
-    <img src="images/6.jpg" alt="">
+    <img src="1.jpg" alt="">
+    <img src="2.jpg" alt="">
+    <img src="3.jpg" alt="">
+    <img src="4.jpg" alt="">
+    <img src="5.jpg" alt="">
+    <img src="6.jpg" alt="">
     
     <!-- Example image with link -->
     <a target="_blank" href="images/3.jpg">
